# livecomponents

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Procfile  README.md  env.example  env.testing  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: pre_commit_enforce.yml  tests.yml
component_ids/: index.html
components/: index.html
configuration/: index.html
context/: index.html
decorators/: index.html
docs/: component_ids.md  components.md  configuration.md  context.md  decorators.md  error_handling.md  example_project.md  execution_results.md  index.md  javascript_integration.md  livecomponents.md  management_commands.md  nested_components.md  quickstart.md  sentry_integration.md  state_serialization.md  templates.md  templatetags.md  uploads.md
error_handling/: index.html
example/: .env  coffee.csv  docker-compose.yml  env.example
example/coffee/: apps.py  urls.py
example/coffee/migrations/: 0001_initial.py  0002_alter_coffeebean_flavor_notes_alter_coffeebean_name_and_more.py
example/counters/: apps.py  urls.py  views.py
example/modals/: urls.py
example/myapp/: models.py  views.py
example/myapp/migrations/: 0001_initial.py
example/project/: settings.py  urls.py
example/project/coffee/: apps.py  urls.py
example/registration/: urls.py  views.py
example/templates/: base.html  chart.html  coffee.html  index.html  modals.html  nestedcounter.html  notification.html  registration.html  sample.html  simplecounter.html  uploads.html  urlnavigation.html
example/uploads/: apps.py  urls.py
example_project/: index.html
execution_results/: index.html
javascript_integration/: index.html
livecomponents/: __init__.py  apps.py  component.py  const.py  decorators.py  exceptions.py  form_utils.py  index.html  live_components.py  logging.py  sentry_utils.py  sessions.py  settings.py  types.py  urls.py  utils.py  views.py
livecomponents/manager/: __init__.py  execution_results.py  manager.py  serializers.py  stores.py  utils.py
livecomponents/state_stores/: __init__.py  interface.py  redis.py
livecomponents/templatetags/: livecomponents.py  utils.py
management_commands/: index.html
nested_components/: index.html
quickstart/: index.html
sample/: asgi.py  settings.py  urls.py  wsgi.py
sample/coffee/: apps.py  models.py  urls.py  views.py
sample/myapp/: apps.py  urls.py
search/: search_index.json
sentry_integration/: index.html
templates/: base.html  coffee.html  index.html
templatetags/: index.html
tests/: conftest.py  test_example.py  test_execution_results.py  test_form_utils.py  test_parser.py  test_redis_state_store.py  test_serializers.py  test_templatetags.py  test_types.py  test_utils.py  test_views.py
uploads/: index.html
(+90 files in other folders)
