[tool.poetry]
name = "sample"
version = "1.0.0"
description = "Django Live Components sample"
readme = "README.md"
homepage = "https://github.com/imankulov/sample"
repository = "https://github.com/imankulov/sample"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
packages = [
    { include = "sample" }
]
license = "Proprietary"
classifiers = [
    "Intended Audience :: Developers",
"Private :: Do Not Upload",
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "~3.11"
django = "^4.1.3"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"

sentry-sdk = "^1.10.1"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
black = "^22.10.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"
import-linter = "^1.4.0"
mkdocs-material = "^8.5.7"
mkdocstrings = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["tests", "sample"]

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
scripts_are_modules = true
namespace_packages = true
no_implicit_optional = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sample.settings"
looponfailroots = "sample"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "C90", "I", "UP"]
ignore = ["E203"]
