[tool.poetry]
name = "livecomponents"
version = "1.2.0"
description = "Django Live Components"
readme = "README.md"
homepage = "https://github.com/om-proptech/live-components-sample"
repository = "https://github.com/om-proptech/live-components-sample"
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
packages = [
    { include = "livecomponents" }
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Private :: Do Not Upload",
]
include = [
    "CHANGELOG.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "~3.11"
django = "^4.1.3"
django-components = "^0.28.3"
django-htmx = "^1.16.0"
pydantic = "^2.4.2"
redis = ">3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
django-environ = "^0.11.2"
pytest-playwright = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
source = ["tests", "sample"]

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
scripts_are_modules = true
namespace_packages = true
no_implicit_optional = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "project.settings"
pythonpath = "example"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "C90", "I", "UP"]
